Finish first part of analysis

--- a/MAL-Spark/Analyzes-1.ipynb
+++ b/MAL-Spark/Analyzes-1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1594,8 +1594,8 @@
       "root\n",
       " |-- username: string (nullable = true)\n",
       " |-- anime_id: string (nullable = true)\n",
-      " |-- my_watched_episodes: integer (nullable = true)\n",
-      " |-- my_score: integer (nullable = true)\n",
+      " |-- my_watched_episodes: string (nullable = true)\n",
+      " |-- my_score: string (nullable = true)\n",
       " |-- my_status: string (nullable = true)\n",
       "\n"
      ]
@@ -1608,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1649,11 +1649,11 @@
       "+-------+------------------------+------------------+\n",
       "|summary|avg(my_watched_episodes)|     avg(my_score)|\n",
       "+-------+------------------------+------------------+\n",
-      "|  count|                  283124|            283059|\n",
-      "|   mean|       19.40477630672478|4.9436072682805285|\n",
-      "| stddev|       281.2469877250342|10.918384976496236|\n",
+      "|  count|                  282462|            282462|\n",
+      "|   mean|      10.058946263335123| 4.829129758740274|\n",
+      "| stddev|       5.095031841799206|2.4283507660537382|\n",
       "|    min|                     0.0|               0.0|\n",
-      "|    max|                 65535.0|            2013.0|\n",
+      "|    max|                    65.0|              10.0|\n",
       "+-------+------------------------+------------------+\n",
       "\n"
      ]
@@ -1668,12 +1668,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can see that in general the mean of watched episodes and score is 19 and 4, but we have a big variation in these values."
+    "You can see that in general the mean of watched episodes and score is ~10 and ~4.8. So that's values appear to be ok. In general animes have 12 or 24 episodes and for score, it's reasonable that the average is 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,126 +1683,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort and put in cache\n",
+    "my_status = my_status.orderBy('my_status')\n",
+    "my_status = my_status.cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------------+-----+\n",
-      "|      my_status|count|\n",
-      "+---------------+-----+\n",
-      "|   Sobrenatural|    1|\n",
-      "|  dead giveaway|    1|\n",
-      "|         Seinen|   14|\n",
-      "|        Handjob|    1|\n",
-      "|          Toys\"|    1|\n",
-      "|           TSA\"|    1|\n",
-      "|        Acción\"|    1|\n",
-      "|good soundtrack|    1|\n",
-      "|      Slapstick|    2|\n",
-      "|            imo|    1|\n",
-      "|             wk|    1|\n",
-      "| Slice of Life\"|    1|\n",
-      "|     G: Seinen\"|    2|\n",
-      "|       Shounen.|    1|\n",
-      "|          AOTS\"|    1|\n",
-      "|             fy|    2|\n",
-      "|           2016|    2|\n",
-      "|           dmc\"|    2|\n",
-      "|         fansub|    1|\n",
-      "|        Romance|    2|\n",
-      "+---------------+-----+\n",
-      "only showing top 20 rows\n",
+      "+---------+--------+--------------------+\n",
+      "|my_status|   count|    count_percentage|\n",
+      "+---------+--------+--------------------+\n",
+      "|        1| 3890885|   4.957608139606192|\n",
+      "|        2|49176529|   62.65874227790849|\n",
+      "|        3| 2903025|    3.69891692236606|\n",
+      "|        4| 3123335|  3.9796270048374356|\n",
+      "|        5|       6|7.644957082421391E-6|\n",
+      "|        6|19389329|  24.705098010324743|\n",
+      "+---------+--------+--------------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# Total of count\n",
+    "total = my_status.selectExpr('sum(count)').collect()\n",
+    "total = list(total[0].asDict().values())[0]\n",
+    "\n",
     "# Show\n",
-    "my_status.show()"
+    "my_status.withColumn('count_percentage',(my_status['count']/total)*100).show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can see that we have wrong values. I need to clean again this column."
+    "The meaning of each status is:\n",
+    "\n",
+    "1: watching <br>\n",
+    "2: completed <br>\n",
+    "3: on hold <br>\n",
+    "4: dropped <br>\n",
+    "6: plan to watch\n",
+    "\n",
+    "<b>Obs: I don't have information of what is 5.</b>\n",
+    "\n",
+    "From the table we can see that status 2 is the highest of all (62%). Soon, most users have already finished the anime. A total of 24% plan to see some anime. The other categories are divided almost equally.\n",
+    "\n",
+    "Summing up status 1 and 6, we can assume that approximately 30% of users are active because they are viewing or planning to view anime.\n",
+    "\n",
+    "Now I would like to compute some percentiles to understand the distribution of each column."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
     "\n",
-    "Check if column my status have values between 1 and 6.\n",
+    "Compute a list of percentile in a spark dataframe.\n",
     "\n",
     "Parameters:\n",
     "-----------\n",
-    "col: Column pyspark dataframe.\n",
+    "df: Spark dataframe to compute percentile.\n",
+    "p: List of percentiles to compute.\n",
+    "col: Column to compute percentile.\n",
     "\n",
     "'''\n",
-    "def check_status(col):\n",
-    "    # All possible status\n",
-    "    status = ['1','2','3','4','5','6']\n",
-    "\n",
-    "    # Check if status is correct\n",
-    "    result = (status[0] == col)\n",
-    "    for s in status[1:]:\n",
-    "        result = (s == col) | result\n",
-    "    return result"
+    "def percentile(df,p,col):\n",
+    "    return [df.selectExpr('percentile('+col+','+i+')').collect()[0] for i in p]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filter by correct values\n",
-    "UserAnimeList = UserAnimeList.filter(test(UserAnimeList['my_status']))"
+    "# Percentile\n",
+    "p1 = percentile(UserAnimeList,['0.1','0.25','0.5','0.75','0.9'],'my_watched_episodes')\n",
+    "p2 = percentile(UserAnimeList,['0.1','0.25','0.5','0.75','0.9'],'my_score')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Count for each my status\n",
-    "my_status = UserAnimeList.groupby('my_status').count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------+--------+\n",
-      "|my_status|   count|\n",
-      "+---------+--------+\n",
-      "|        1| 4057788|\n",
-      "|        2|50445526|\n",
-      "|        3| 2985804|\n",
-      "|        4| 3194353|\n",
-      "|        5|       6|\n",
-      "|        6|19392104|\n",
-      "+---------+--------+\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[Row(percentile(my_watched_episodes, CAST(0.1 AS DOUBLE), 1)=0.0),\n",
+       " Row(percentile(my_watched_episodes, CAST(0.25 AS DOUBLE), 1)=0.0),\n",
+       " Row(percentile(my_watched_episodes, CAST(0.5 AS DOUBLE), 1)=2.0),\n",
+       " Row(percentile(my_watched_episodes, CAST(0.75 AS DOUBLE), 1)=12.0),\n",
+       " Row(percentile(my_watched_episodes, CAST(0.9 AS DOUBLE), 1)=25.0)]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Show\n",
-    "my_status.orderBy('my_status').show()"
+    "p1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(percentile(my_score, CAST(0.1 AS DOUBLE), 1)=0.0),\n",
+       " Row(percentile(my_score, CAST(0.25 AS DOUBLE), 1)=0.0),\n",
+       " Row(percentile(my_score, CAST(0.5 AS DOUBLE), 1)=6.0),\n",
+       " Row(percentile(my_score, CAST(0.75 AS DOUBLE), 1)=8.0),\n",
+       " Row(percentile(my_score, CAST(0.9 AS DOUBLE), 1)=9.0)]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show\n",
+    "p2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the vast majority of people do not watch many episodes of the anime. 50% saw 2 episodes or less. 25% of people will watch more than 12 episodes.\n",
+    "\n",
+    "Regarding the scores we can see that they are relatively high. Most people gave anime scores above 50%.\n",
+    "\n",
+    "# Conclusion\n",
+    "\n",
+    "Overall we can see that it is not difficult to please anime users. Their ratings are generally high and there are few cases when they drop an anime.\n",
+    "\n",
+    "In addition, we can see that some strategies can be adopted to focus on more specific audiences and anime that appear to be more popular in addition to having a wider reach. Servicing these audiences and these animes in a customized way can be crucial for good market performance.\n",
+    "\n",
+    "Finally, it is strange that although users are easily pleased, we do not have many active users (only 30% according to our taste). Therefore, understanding what causes many users to drop out as well as understanding what to do to maintain them can be a key to success."
    ]
   }
  ],
